added timer and improved UI

--- a/style.css
+++ b/style.css
@@ -114,3 +114,35 @@ video {
     right: 6rem;
     z-index: 2;
 }
+
+.scale-record {
+    animation-name: scale-record;
+    animation-iteration-count: infinite;
+    animation-duration: 1s;
+}
+.scale-capture {
+    animation-name: scale-capture;
+    animation-iteration-count: 1;
+    animation-duration: 1s;
+}
+@keyframes scale-record {
+    0%{
+        transform: scale(0.7);
+    }
+    100%{
+        transform: scale(1.1);
+    }
+}
+
+@keyframes scale-capture {
+    0%{
+        transform: scale(0.7);
+    }
+    100%{
+        transform: scale(1.1);
+    }
+}
+
+.timer { 
+    display: none;
+}
